documentation/versioned_docs/version-6.0/framework/index.md
---
id: index
title: Introduction
slug: framework.html
---

![intro_gif](/img/intro_gif.gif)

[![version badge](https://img.shields.io/maven-central/v/io.kotest/kotest-framework-engine.svg?label=release)](https://search.maven.org/search?q=g:io.kotest%20OR%20g:io.kotest.extensions)
[<img src="https://img.shields.io/maven-metadata/v?metadataUrl=https%3A%2F%2Fcentral.sonatype.com%2Frepository%2Fmaven-snapshots%2Fio%2Fkotest%2Fkotest-framework-engine%2Fmaven-metadata.xml"/>](https://central.sonatype.com/repository/maven-snapshots/io/kotest/kotest-framework-engine/maven-metadata.xml)

Test with Style
---------------

Write [simple and beautiful tests](writing_tests.md) using one of the available styles:

```kotlin
class MyTests : FunSpec({
  test("length should return size of string") {
    "hello".length shouldBe 5
  }
  test("startsWith should test for a prefix") {
    "hello world" should startWith("hello")
  }
})
```

Kotest allows tests to be created in several styles, so you can choose the style that suits you best.

Check all the Tricky Cases With Data Driven Testing
--------------------------

Handle even an enormous amount of input parameter combinations easily with [data driven tests](datatesting/data_driven_testing.md):

```kotlin
class DataTestExample : FreeSpec({
   "maximum of two numbers" {
      withData(
         Triple(1, 5, 5),
         Triple(1, 0, 1),
         Triple(0, 0, 0)
      ) { (a, b, max) ->
         Math.max(a, b) shouldBe max
      }
   }
})
```



Fine Tune Test Execution
------------------------

You can specify the number of invocations, parallelism, and a timeout for each test or for all tests. And you can group
tests by tags or disable them conditionally. All you need is [`config`](project_config.md):

```kotlin
class MySpec : DescribeSpec({
   describe("should use config").config(timeout = 2.seconds, invocations = 10, tags = setOf(Database, Linux)) {
      // test here
   }
})
```

